Changes in Version 0.8-0

  o  Show individual observations and density estimate in histogram plot.

Changes in Version 0.7-9

  o  Packages delcared in Depends field are now in the Imports field.

  o  Redesigned the layout in the Format function GUI.

Changes in Version 0.7-8

  o  Variables of class 'Date' are now handled correctly.

  o  Removed dependency on the 'rgl' package.

  o  Improved performance for counting the number of lines in a file.

  o  Fixed bug that was preventing data imports using paste operation.

  o  Improved performance in the EditData function by removing its reliance on a
     copy of the data frame that was coerced into character-class components.

  o  The base::format function is now used when a format conversion
     specification string is not supplied. Previously defaulted to a general
     string representation; for example, numeric objects were formatted using
     the '%f' string.

  o  SummarizeVariable function removed and replaced with the more general
     base::summary and utils::str functions.

Changes in Version 0.7-5

  o  Graphics are now opened in a platform-independent way using the dev.new
     function.

  o  Function name changes: ViewText to EditText, and ViewData to EditData.

  o  Calendar date and time variables are accurately converted to character
     strings using the POSIXct2Character function.

  o  Added ability to import, edit, and export comment string.

  o  Added ability to edit raw data in a spreadsheet. Final edits are saved in
     a change log.

  o  Added GUI for importing data from an R package. R data sets may also be
     imported from a file.

  o  RSurvey project files are specified using the *.RData file extension. The
     *.rda extension is reserved for R data files.

  o  Functions ReadFile and WriteFile have been embedded into the ImportTextData
     and ExportData functions, respectively.

  o  Additional arguments have been added to the Export Data GUI.
